# myapp4triqs

./: .clang-tidy  .travis.yml  CMakeLists.txt  Jenkinsfile  LICENSE.txt  README.md
.github/ISSUE_TEMPLATE/: bug.md
c++/myapp4triqs/: CMakeLists.txt  myapp4triqs.cpp  myapp4triqs.hpp
doc/: CMakeLists.txt  about.rst  changelog.rst  conf.py.in  documentation.rst  index.rst  install.rst  issues.rst
doc/_templates/: sideb.html
python/myapp4triqs/: CMakeLists.txt  __init__.py  myapp4triqs_module_desc.py  version.py.in
share/: CMakeLists.txt  myapp4triqs.modulefile.in  myapp4triqsvars.sh.in
share/cmake/: CMakeLists.txt  myapp4triqs-config-version.cmake.in  myapp4triqs-config.cmake.in
test/c++/: CMakeLists.txt  basic.cpp
test/python/: Basic.py
